# commandai

./: .dockerignore  .env.example  .gitignore  .railwayignore  AGENT_GUIDE.md  ALL_FIXES_COMPLETE.md  ALL_USER_ISSUES_FIXED.md  AUTH_SYSTEM_COMPLETE.md  BUG_FIXES_IN_PROGRESS.md  BUILD_READY_FOR_TESTING.md  CLOUDFLARE_DEPLOY.md  CLOUDFLARE_PAGES_CONFIG.md  CLOUDFLARE_PAGES_SETUP.md  COMPLETE_STATUS.md  CRITICAL_FIXES_COMPLETED.md  CURRENT_STATUS.md  DEAD_BUTTONS_FIXED.md  DEPLOYMENT_READY.md  DIAGNOSTIC_REPORT.md  Dockerfile  ERROR_HANDLING_AUDIT.md  FINAL_FIXES.md  FINAL_STATUS.md  FIXES_APPLIED.md  FIXES_COMPLETED.md  HANDOFF.md  LATEST_UPDATE.md  PROCESS_LIST_DEBUG.md  PRODUCTION_PLAN.md  PRODUCTION_READY.md  PRODUCTION_SETUP.md  QUICK_START.md  README.md  READY_FOR_TESTING.md  REMOTE_DESKTOP_COMPLETE.md  REMOTE_DESKTOP_FIXES_APPLIED.md  REMOTE_DESKTOP_STATUS.md  RENDER_DEPLOYMENT_GUIDE.md  SECURITY.md  SECURITY_AUDIT.md  (+18 more)
.github/: PULL_REQUEST_TEMPLATE.md
apps/agent/: Cargo.toml  README.md
apps/agent/src/: main.rs  registry.rs
apps/agent/src/capabilities/: API.md  Architecture.md  Examples.md  README.md  Security.md  Testing.md  mod.rs  system_disk.rs
apps/orchestrator/: API.md  Dockerfile  README.md  pyproject.toml
apps/orchestrator/app/: main.py
apps/orchestrator/app/intents/: capability_registry.py  models.py  router.py
apps/orchestrator/app/llm/: anthropic_provider.py  provider.py
apps/orchestrator/tests/: test_intents.py  test_llm_provider.py
apps/web-console/src-tauri/: Cargo.toml  tauri.conf.json
apps/web-console/src-tauri/icons/: icon.icns
(+239 files in other folders)
