[package]
name = "commandai-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "commandai-agent"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints.rust]
unsafe_code = "deny"
