[project]
name = "commandai-orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "anthropic>=0.34.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
